# unit-test-demo

./: README.md
app/: CMakeLists.txt  Makefile  prj.conf
app/boost/: CMakeLists.txt
app/boost/src/: main.cpp  test_assert.cpp  test_math.cpp  test_mock.cpp
app/cpputest/: CMakeLists.txt
app/cpputest/src/: mock.cpp  test_assert.cpp  test_math.cpp  test_mock.cpp
app/inc/: math.hpp  mock.hpp
app/src/: main.cpp  math.cpp
app/ztest/: CMakeLists.txt  prj.conf  testcase.yaml
app/ztest/src/: test_assert.cpp  test_math.cpp  test_mock.cpp
twister-out/: twister.csv  twister.xml  twister_discard.csv  twister_report.xml
twister-out/native_posix/testing.ztest/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
twister-out/native_posix/testing.ztest/modules/TraceRecorder/: Makefile
twister-out/native_posix/testing.ztest/modules/altera/: Makefile  cmake_install.cmake
twister-out/native_posix/testing.ztest/modules/atmel/: Makefile  cmake_install.cmake
twister-out/native_posix/testing.ztest/modules/canopennode/: Makefile
twister-out/native_posix/testing.ztest/modules/chre/: Makefile
twister-out/native_posix/testing.ztest/modules/civetweb/: Makefile
twister-out/native_posix/testing.ztest/modules/cmsis/: Makefile  cmake_install.cmake
twister-out/native_posix/testing.ztest/modules/cypress/: Makefile  cmake_install.cmake
twister-out/native_posix/testing.ztest/modules/espressif/: Makefile  cmake_install.cmake
twister-out/native_posix/testing.ztest/modules/fatfs/: Makefile  cmake_install.cmake
twister-out/native_posix/testing.ztest/modules/hal_gigadevice/: Makefile  cmake_install.cmake
twister-out/native_posix/testing.ztest/zephyr/: .cmake.dotconfig.checksum  .config  Makefile  cmake_install.cmake  edt.pickle  linker_zephyr_pre0.cmd  linker_zephyr_pre0.cmd.dep  linker_zephyr_pre1.cmd  linker_zephyr_pre1.cmd.dep  zephyr.dts.d  zephyr.dts.pre  zephyr.elf  zephyr.lst  zephyr.map  zephyr.stat  zephyr_pre0.map
(+136 files in other folders)
